--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
@@ -8,22 +8,114 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <!-- 流程图 -->
+  <style>
+    :root {
+      --docsifytabs-border-color: #ededed;
+      --docsifytabs-tab-highlight-color: #42b983;
+    }
+
+    code {
+      font-family: consolas !important;
+      font-size: 1rem !important;
+    }
+
+    [class^="lang"] {
+      font-family: consolas !important;
+      font-size: 1rem !important;
+      line-height: 1.3rem !important;
+      padding-top: 1rem !important;
+      padding-bottom: 1rem !important;
+    }
+
+    kbd,
+    table,
+    p,
+    li {
+      font-size: 1rem !important;
+      margin: 8px;
+    }
+
+    .sidebar>h1 {
+      font-weight: bolder !important;
+      text-align: left !important;
+    }
+
+    .sidebar>h1 div {
+      width: 50px;
+      height: 50px;
+      margin-left: 20px;
+      margin-right: 12px;
+      display: inline-block;
+
+    }
+
+    .sidebar>h1 div img {
+      vertical-align: middle;
+      border-radius: 50%;
+    }
+
+    .katex {
+      font-size: 1.1rem !important;
+    }
+
+
+    h2,
+    h3,
+    h4,
+    h5 {
+      font-family: consolas, 'Microsoft YaHei' !important;
+    }
+
+    .scroll-to-top {
+      -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+      align-items: center !important;
+      -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+      justify-content: center !important;
+      background: #fff !important;
+      border-radius: 4px !important;
+      width: 50px !important;
+      height: 50px !important;
+      line-height: 48px !important;
+      color: #8590a6 !important;
+      -webkit-box-shadow: 0 1px 3px rgb(18 18 18 / 10%) !important;
+      box-shadow: 0 1px 3px rgb(18 18 18 / 10%) !important;
+    }
+
+    .scroll-to-top:hover {
+      background-color: #b631af !important;
+      color: #fff !important;
+    }
+  </style>
+
 </head>
 
 <body>
-  <nav>
-    <a href="#/">EN</a>
-    <a href="#/zh-cn/">中文</a>
-  </nav>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '<span>GoJoSa\'s Notes </span>',
-      repo: '',
+      name: '<div><img src=./duitang_1624603185517.png></img></div><span>GoJoSa\'s Notes </span>',
+      repo: 'VioletEvGaden/GoJoSaNotes',
       // 启用相对路径
       relativePath: true,
       loadSidebar: true,
       loadNavbar: true,
+      subMaxLevel: 3,
+      auto2top: true,
+      coverpage: true,
+      onlyCover: true,
+      mergeNavbar: true,
+      notFoundPage: true,
+      topMargin: 90,
+      scrollToTop: {
+        auto: true,
+        text: 'Top',
+        right: 15,
+        bottom: 15,
+        offset: 500
+      },
       search: 'auto', // 默认值
       search: [
         '/', // => /README.md
@@ -31,7 +123,21 @@
         '/get-started', // => /get-started.m
         '/zh-cn/', // => /zh-cn/README.md
       ],
+      plugins: [
+        function (hook) {
+          var footer = [
+            '<hr/>',
+            '<footer>',
+            '<span>Created by <span>',
+            '<span><a href="/#/about">GoJoSa</a> &copy;2021</span>',
+            '</footer>'
+          ].join('');
 
+          hook.afterEach(function (html) {
+            return html + footer;
+          });
+        }
+      ],
       // 完整配置参数
       search: {
         maxAge: 86400000, // 过期时间，单位毫秒，默认一天
@@ -71,12 +177,23 @@
         // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
         // 匹配到的字符串将被用来识别索引
         pathNamespaces: /^(\/(zh-cn|ru-ru))?(\/(v1|v2))?/
+      },
+      count: {
+        countable: true,
+        fontsize: '0.9em',
+        color: 'rgb(90,90,90)',
+        language: 'chinese'
       }
     }
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/disqus.min.js"></script> -->
+  <script src="//unpkg.com/docsify-scroll-to-top/dist/docsify-scroll-to-top.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
 </body>
 
 </html>
