--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
       onlyCover: true,
       mergeNavbar: true,
       notFoundPage: true,
+      notFoundPage: {
+        '/': '_404.md',
+        '/de': 'de/_404.md',
+      },
       topMargin: 90,
       scrollToTop: {
         auto: true,
