--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
       coverpage: true,
       onlyCover: true,
       mergeNavbar: true,
-      notFoundPage: true,
-      notFoundPage: {
-        '/#/': '_404.md',
-        '/de': 'de/_404.md',
-      },
+      notFoundPage: 'my404.md',
       topMargin: 90,
       scrollToTop: {
         auto: true,
